--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [tool.poetry]
-name = "vt"
-version = "0.0.6"
+name = "vt-api"
+version = "0.0.8"
 description = "Simple API wrapper for VirusTotal"
 authors = ["t-a-y-l-o-r <tcochran.dev@gmail.com>"]
 license = "MIT"
 readme = "README.md"
+packages = [{include = "vt"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
