--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "vt-api"
-version = "0.0.8"
+name = "virustotal-api"
+version = "0.0.9"
 description = "Simple API wrapper for VirusTotal"
 authors = ["t-a-y-l-o-r <tcochran.dev@gmail.com>"]
 license = "MIT"
