--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,16 @@
 [tool.poetry]
 name = "vt-restful"
-version = "0.0.10"
+version = "0.0.11"
 description = "Simple API wrapper for VirusTotal"
 authors = ["t-a-y-l-o-r <tcochran.dev@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 packages = [{include = "vt"}]
+classifiers = [
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+]
 
 [tool.poetry.dependencies]
 python = "^3.10"
