--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ requests = "^2.31.0"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.3.3"
 pudb = "^2022.1.3"
+types-requests = "^2.31.0.2"
 
 [build-system]
 requires = ["poetry-core"]
