--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ requests = "^2.31.0"
 pre-commit = "^3.3.3"
 pudb = "^2022.1.3"
 types-requests = "^2.31.0.2"
+pytest = "^7.4.0"
+vcrpy = "^5.1.0"
 
 [build-system]
 requires = ["poetry-core"]
