--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pudb = "^2022.1.3"
 types-requests = "^2.31.0.2"
 pytest = "^7.4.0"
 vcrpy = "^5.1.0"
+pytest-vcr = "^1.0.2"
 
 [build-system]
 requires = ["poetry-core"]
