--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ requests = "^2.31.0"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.3.3"
 pudb = "^2022.1.3"
+types-requests = "^2.31.0.2"
+pytest = "^7.4.0"
+vcrpy = "^5.1.0"
+pytest-vcr = "^1.0.2"
 
 [build-system]
 requires = ["poetry-core"]
@@ -30,3 +34,25 @@ base = "https://raw.githubusercontent.com/flakeheaven/flakeheaven/master/pyproje
 exclude = ["README.rst", "README.md"]
 format = "grouped"
 show_source = true
+
+[tool.flakeheaven.plugins]
+flake8-mutable = ["+*"]
+pylint = ["-*"]
+pycodestyle = ["-*"]
+
+[tool.pylint.messages_control]
+disable = [
+  "C0115",
+  "C0116",
+  "C0114",
+  "C0103",
+  "C0415",
+  "W0707",
+  "W0511",
+  "R0903",
+  "R0913",
+  "W0212",
+  "W0221",
+  "W1203",
+  "W503",
+]
